Dark mode dodaci, font, bugfix

--- a/front/style.css
+++ b/front/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
   }
   body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Consolas, Helvetica, sans-serif;
     background-color: #ceeaff;
     justify-content: center;
     height: 100vh;
@@ -479,11 +479,29 @@
   font-weight: bold;
   font-size: 50px;
 }
+
+.index-naslov-dark{
+  text-align: center;
+  margin-top: 5px;
+  color:#ceeaff;
+  font-weight: bold;
+  font-size: 50px;
+}
+
 .index-naslov:hover{
   transform: translateY(-10px);
 }
 .index-p{
   color:#0082e6;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 30px;
+}
+
+.index-p-dark{
+  color:#ceeaff;
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -685,6 +703,20 @@
   margin-bottom: 4px;
   padding: 5px;
 }
+
+.vise-p-sadrzaj{
+  margin-left: 30px;
+  font-size: 30px;
+  /*border:5px dashed #c1e2fc;*/
+  border:5px dashed transparent;
+  border-image: linear-gradient(45deg, #addafd, #0082e6);
+  border-image-slice: 4;
+  border-radius: 5%;
+  margin-bottom: 4px;
+  padding: 5px;
+  word-wrap: break-word;
+}
+
 .vise-h2{
   font-size: 40px;
 }
